[package]
name = "ddeutil-workflow"
version = "0.1.0"
edition = "2021"
authors = ["ddeutils <korawich.anu@gmail.com>"]
description = "Lightweight workflow orchestration with YAML template support"
license = "MIT"
repository = "https://github.com/ddeutils/ddeutil-workflow"
keywords = ["orchestration", "workflow", "yaml", "scheduling", "automation"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
rand = "0.8"
md5 = "0.7"
sha2 = "0.10"
once_cell = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Template engine
handlebars = "5.1"

# Scheduling
cron = "0.12"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Process execution
tokio-process = "0.2"

# File system
walkdir = "2.0"

# Optional features
bollard = { version = "0.16", optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[features]
default = []
docker = ["bollard"]
api = ["axum", "tower", "tower-http"]
all = ["docker", "api"]

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.11"

[[bin]]
name = "workflow-cli"
path = "src/bin/main.rs"

[lib]
name = "ddeutil_workflow"
path = "src/lib.rs"
